# noveltygen

./: LICENSE  README.md  TODO.md  __init__.py  pyproject.toml  requirements.txt  setup.py
domains/blocksworld/: domain.tsal  domain_generator.py  problem.tsal  scenario_generator.py
domains/monopoly/: domain.pddl  domain.tsal  problem.pddl
domains/monopoly_goal_test/: problem.tsal
domains/test/: domain.pddl  domain.tsal  problem.pddl  problem.tsal
domains/viz_doom/: domain.tsal
src/noveltygen/: RTransformation.py  RTransformations.py  TTransformations.py  novelty_generator.py
src/noveltygen.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/noveltygen/dimensions/: Dimensions notes  State of novelty dimensions
src/noveltygen/dimensions/Novel_Entry_Determinism/: frequent_nondeterministic.py
src/noveltygen/dimensions/Novel_External_Agents/: __init__.py  novel_external_agents_present.py
src/noveltygen/dimensions/Novelity_Obviousness/: alien_observation.py  entry_transition_discernable.py  novel_transition_discernable.py
src/noveltygen/dimensions/Novelty Frequency/: less_frequent_than_observation.py
src/noveltygen/dimensions/Transition_Novelty_Type/: missing_change.py  modified_change_probability.py  modified_change_size.py  new_change.py  replaced_change.py
src/noveltygen/levels/: level1.py  level2.py  level3.py  level4.py  level5.py  level6.py  level7.py  level8.py  novelty_level.py
